--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
-idna==2.5
+idna
 Jinja2==3.1.4
 jws==0.1.3
 markdown-it-py==3.0.0
